fixed overflow on overlay for mobile view

--- a/styles/partials/_overlay.scss
+++ b/styles/partials/_overlay.scss
@@ -1,6 +1,6 @@
 .overlay {
-    width: 100vw;
-    height: 100vh;
+    min-width: 100vw;
+    min-height: 100vh;
     background: radial-gradient(circle, rgba(255,255,255,1) 0%, rgba(0,0,0,1) 79%);
     z-index: 10;
     position: absolute;
@@ -36,11 +36,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
 }
 .overlayExplanation {
     display: block;
-    margin: 0 auto;
+    margin: 20px auto;
 }
 
 .overlayList {
